# MaiRust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml
crates/mairust-api/: Cargo.toml
crates/mairust-api/src/: auth.rs  handlers.rs  lib.rs  openapi.rs  routes.rs
crates/mairust-api/src/handlers/: admin.rs  campaigns.rs  domain_aliases.rs  domain_settings.rs  domains.rs  health.rs  hooks.rs  mailboxes.rs  messages.rs  policies.rs  recipient_lists.rs  search.rs  send.rs  tenants.rs  users.rs
crates/mairust-common/: Cargo.toml
crates/mairust-common/src/: config.rs  error.rs  lib.rs  types.rs
crates/mairust-core/: Cargo.toml
crates/mairust-core/src/: lib.rs  main.rs
crates/mairust-core/src/email_auth/: dkim.rs  dmarc.rs  mod.rs  spf.rs
crates/mairust-core/src/hooks/: manager.rs  mod.rs
crates/mairust-core/src/imap/: command.rs  mod.rs  parser.rs  response.rs  server.rs  session.rs
crates/mairust-core/src/plugins/: categorization.rs  manager.rs  mod.rs  types.rs
crates/mairust-core/src/policy/: engine.rs  mod.rs
crates/mairust-core/src/pop3/: command.rs  mod.rs  response.rs  server.rs  session.rs
crates/mairust-core/src/queue/: manager.rs  mod.rs
crates/mairust-core/src/scheduled/: manager.rs  mod.rs  rate_limiter.rs  scheduler.rs  template.rs
crates/mairust-core/src/search/: client.rs  indexer.rs  mod.rs
crates/mairust-core/src/smtp/: auth.rs  handler.rs  mod.rs  server.rs  tls.rs
crates/mairust-core/src/spam/: mod.rs  rspamd.rs  rules.rs
crates/mairust-server/: Cargo.toml
crates/mairust-server/src/: main.rs
crates/mairust-storage/: Cargo.toml
crates/mairust-storage/migrations/: 20240101000000_initial.sql  20240102000000_api_keys.sql  20240103000000_phase3_threading.sql  20240104000000_scheduled_email.sql
crates/mairust-storage/src/: db.rs  file.rs  lib.rs  models.rs  repository.rs
crates/mairust-storage/src/repository/: api_keys.rs  campaigns.rs  categories.rs  domain_aliases.rs  domain_settings.rs  domains.rs  hooks.rs  mailboxes.rs  messages.rs  policies.rs  recipient_lists.rs  recipients.rs  scheduled_messages.rs  tags.rs  tenants.rs  threads.rs  unsubscribes.rs  users.rs
crates/mairust-web/: Cargo.toml
crates/mairust-web/src/: handlers.rs  lib.rs  routes.rs  templates.rs
crates/mairust-web/static/css/: style.css
crates/mairust-web/static/js/: app.js
crates/mairust-web/templates/: base.html  compose.html  inbox.html  login.html  message.html  settings.html
development_logs/: 2024-12-04-email-auth.md  2024-12-05-phase3-full-mailbox.md  2024-12-11-scheduled-email-design.md  2025-12-04-email-auth.md  2025-12-04-phase1-handoff.md  2025-12-04-phase1-review-fixes-02.md  2025-12-04-phase1-security-fixes.md  2025-12-05-imap-mailbox-access-fix.md  2025-12-05-imap-pop3-storage-fix.md  2025-12-05-imap-pop3-utf8-fix.md  2025-12-05-phase1-review.md  2025-12-05-phase2-platform-expansion.md  2025-12-05-phase3-full-mailbox.md  2025-12-05-phase3-implementation-fixes.md  2025-12-05-phase3-review.md  2025-12-06-phase1-code-review.md  2025-12-11-scheduled-email-design.md  2025-12-11-scheduled-email.md  2026-02-09-security-review-codex.md  2026-02-09-security-review.md  2026-02-10-security-fixes.md
docs/: MaiRust追加設計メモ.md  architecture.md  competition.md  deployment_guide_en.md  deployment_guide_ja.md  plugin-architecture.md  plugin-marketplace.md  roadmap.md  設計資料v1.md  設計資料v1v2矛盾点整理.md  設計資料v2.md  設計資料v3.md
docs/decisions/: 001-foundation.md  002-storage.md  003-api.md  004-authentication.md  005-hooks.md  006-plugins.md  007-marketplace.md  008-outbound-spam.md  009-container.md  010-operations.md  011-multitenancy.md  012-phase1-mvp.md  013-scheduled-email.md  README.md  glossary.md
