[package]
name = "mairust-common"
description = "Common types and utilities for MaiRust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Configuration
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID & Time
uuid = { workspace = true }
chrono = { workspace = true }

# Crypto (for signature verification)
hmac = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
